# infra-health-monitor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  services.demo.yaml  services.yaml
.github/workflows/: ci.yml
docs/: README.md
migrations/: env.py
migrations/versions/: 0001_initial.py
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: infra-monitor.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: seed_demo.py
src/monitor/: __init__.py  auth.py  config.py  database.py  leader.py  logging_config.py  main.py  metrics.py  models.py  scheduler.py  service_config.py  tracing.py
src/monitor/alerts/: __init__.py  base.py  discord.py  notifier.py  telegram.py
src/monitor/checks/: __init__.py  base.py  http_check.py  system_check.py  tcp_check.py
src/monitor/static/: index.html
tests/: conftest.py  test_alerts.py  test_api.py  test_auth.py  test_checks.py  test_correlation.py  test_leader.py  test_logging.py  test_metrics.py  test_rate_limit.py  test_reload.py  test_scheduler.py  test_tracing.py  test_uptime.py
